# imggenhub

./: .env.example  .gitignore  AUTO_DEPLOY_QUICK_START.md  DESTROY_INSTANCES_FEATURE.md  DESTROY_USAGE_GUIDE.md  README.md  VAST_AI_CLI_GUIDE.md  check_log.py  check_nb.py  check_results.py  check_status.py  check_status_file.py  check_t4x2.py  check_t4x2_full.py  create_flux_notebook.py  examples_auto_deploy.py  fix_t4x2_notebook.py  get_status.py  get_t4x2_log.py  monitor_kernel.py  parse_log.py  poll_and_download.py  poll_continuous.py  pyproject.toml  rebuild_bf16_notebook.py  run_t4x2_test.py  run_tests.py  status.py  validate_vast_ai.sh  watch_kernel.py
.github/workflows/: dist-cleanup.yml  dist_cleanup.yml  image-generation.yml  image_generation.yml  kaggle-regression-test.yml  kaggle_regression_test.yml  unit-tests.yml
docs/: FORGE_UI_INTEGRATION.md  TESLA_P40_QUICK_START.md  VAST_AI_QUICK_REFERENCE.md  VAST_AI_README.md  VAST_AI_TEST_GUIDE.md
scripts/: validate_inputs.sh
src/imggenhub/kaggle/: README.md  __init__.py  deploy.py  download.py  main.py  poll_status.py  prompts.json
src/imggenhub/vast_ai/: VAST_AI_GUIDE.md  __init__.py  auto_deploy.py  auto_deploy_cli.py  cli.py  client.py  cost_cli.py  cost_tracking.py  deployments.py  dummy.py  dummy_cli.py  executor.py  flux_cli.py  forge.py  forge_cli.py  forge_deploy.sh  pipelines.py  ssh.py  stable_cli.py  test_remote_pipeline.py  types.py
tests/: test_deploy.py  test_download.py  test_image_dimension_validation.py  test_main.py  test_poll_status.py  test_prompts.py  test_vast_ai_integration.py
tests/kaggle/core/: test_deploy.py  test_download_selective.py  test_parallel_deploy.py
tests/kaggle/utils/: test_arg_validator.py  test_model_family.py
(+40 files in other folders)
