[project]
name = "imggenhub"
version = "0.1.0"
description = ""
authors = [
    {name = "leweex95",email = "csibi.levente14@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "imggenhub", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
