[tool.poetry]
name = "imggenhub"
version = "1.3.0"
description = ""
authors = ["leweex95 <csibi.levente14@gmail.com>"]
readme = "README.md"
packages = [{include = "imggenhub", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
huggingface-hub = ">=0.35.1,<0.36.0"
torch = ">=2.8.0,<3.0.0"
diffusers = ">=0.35.1,<0.36.0"
transformers = ">=4.56.2,<5.0.0"
kaggle = ">=1.7.4.5,<2.0.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
